--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,17 +1,17 @@
 [
     {
         "title": "Visualizing Corporate vs. Live-in Landlords",
-        "image": "./images/A2_Over_Time.jpg",
+        "image": "/images/A2_Over_Time.jpg",
         "description": "An exploratory analysis of the relationships between corporate ownership rates, owner occupancy rates and demographics in Boston neighborhoods over the time period of 2004-2024."
     },
     {
         "title": "Critique by Design: Viral Visualizations",
-        "image": "./images/A3_swab_chart.jpg",
+        "image": "/images/A3_swab_chart.jpg",
         "description": "A study in the delicate balance between data transparency and emotive storytelling in the context of visualizing COVID cases in the US from 2020-2022."
     },
     {
         "title": "Persuasive or Deceptive Visualizations",
-        "image": "./images/A4_Disaster_intensity.jpg",
+        "image": "/images/A4_Disaster_intensity.jpg",
         "description": "Contrasting visualizations of climate change indicators to argue for two different sides of a proposition."
     },
     {
