fixed responsive grid finally

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -2,26 +2,26 @@
     {
         "title": "Visualizing Corporate vs. Live-in Landlords",
         "image": "./images/A2_Over_Time.jpg",
-        "year": "2025",
-        "description": "An exploratory analysis of the relationships between corporate ownership rates, owner occupancy rates and demographics in Boston neighborhoods over the time period of 2004-2024."
+        "description": "An exploratory analysis of the relationships between corporate ownership rates, owner occupancy rates and demographics in Boston neighborhoods over the time period of 2004-2024.",
+        "year": "2025"
     },
     {
         "title": "Critique by Design: Viral Visualizations",
         "image": "./images/A3_swab_chart.jpg",
-        "year": "2025",
-        "description": "A study in the delicate balance between data transparency and emotive storytelling in the context of visualizing COVID cases in the US from 2020-2022."
+        "description": "A study in the delicate balance between data transparency and emotive storytelling in the context of visualizing COVID cases in the US from 2020-2022.",
+        "year": "2025"
     },
     {
         "title": "Persuasive or Deceptive Visualizations",
         "image": "./images/A4_Disaster_intensity.jpg",
-        "year": "2025",
-        "description": "Contrasting visualizations of climate change indicators to argue for two different sides of a proposition."
+        "description": "Contrasting visualizations of climate change indicators to argue for two different sides of a proposition.",
+        "year": "2025"
     },
     {
         "title": "Obcaecati praesentium cumque odit?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "year": "2024",
-        "description": "Delectus quaerat, nihil similique ab recusandae ut porro ex necessitatibus inventore tempore hic provident, perferendis aut alias totam quod eius iusto nam temporibus error fuga? Quaerat dolore aliquam aut repellat."
+        "description": "Delectus quaerat, nihil similique ab recusandae ut porro ex necessitatibus inventore tempore hic provident, perferendis aut alias totam quod eius iusto nam temporibus error fuga? Quaerat dolore aliquam aut repellat.",
+        "year": "2024"
     },
     {
         "title": "Vero ducimus at nihil.",
